fast-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fast-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fast-api
  template:
    metadata:
      labels:
        app: fast-api
    spec:
      containers:
      - name: fast-api
        image: fast-api:v1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
